// Interface AparelhoTelefonico
interface AparelhoTelefonico {
  void ligar(double numero);
  void atender();
  void iniciarCorreioVoz();
}