// Interface ReprodutorMusical
interface ReprodutorMusical {
  void tocar(String musica);
  void pausar();
  void selecionarMusica(String musica);
}